--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-av": "^9.1.2",
     "expo-status-bar": "~1.0.4",
     "install": "^0.13.0",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
@@ -27,6 +28,7 @@
     "react-native-screens": "^3.2.0",
     "react-native-video": "^5.1.1",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
     "redux": "^4.1.0"
   },
   "devDependencies": {
