--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "my_appp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon.jpg",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash.jpg",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#BEBEC0"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
