--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "expo": "^41.0.1",
     "expo-av": "^9.1.2",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "install": "^0.13.0",
+    "intl": "^1.2.5",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
