--- a/package.json
+++ b/package.json
@@ -8,39 +8,45 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
-    "expo": "^41.0.1",
-    "expo-av": "^9.1.2",
-    "expo-status-bar": "~1.0.4",
+    "expo": "^43.0.0",
+    "expo-av": "~10.1.3",
+    "expo-linear-gradient": "~10.0.3",
+    "expo-status-bar": "~1.1.0",
     "firebase": "8.2.3",
     "install": "^0.13.0",
     "intl": "^1.2.5",
     "native-base": "^2.15.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-dotenv": "^3.2.0",
     "react-native-elements": "^3.4.1",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-maps": "^0.28.0",
+    "react-native-maps": "0.28.1",
     "react-native-maps-directions": "^1.8.0",
-    "react-native-reanimated": "^2.1.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.2.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-tailwind-classnames": "^0.1.2",
     "react-native-video": "^5.1.1",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "tailwind-react-native-classnames": "^1.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
