--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^0.21.1",
     "expo": "^43.0.0",
     "expo-av": "~10.1.3",
+    "expo-device": "~4.0.3",
     "expo-linear-gradient": "~10.0.3",
+    "expo-notifications": "~0.13.3",
     "expo-status-bar": "~1.1.0",
     "firebase": "8.2.3",
     "install": "^0.13.0",
@@ -26,6 +28,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-com-address": "^1.1.0",
     "react-native-dotenv": "^3.2.0",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
